# quickbooks

./: .gitignore  README.md  changelog.md  circle.yml  jenkins.sh  quickbooks.cabal  stack.yaml
src/: QuickBooks.hs  QuickBooks.hs.orig
src/QuickBooks/: Authentication.hs  Bundle.hs  Category.hs  Customer.hs  Invoice.hs  Item.hs  Logging.hs  QBText.hs  Requests.hs  Types.hs
test/: Data.hs  Main.hs  QuickBooksSpec.hs  doctests.hs
