name:                quickbooks
version:             0.0.0.0
synopsis:            QuickBooks API binding.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Juan Villa
maintainer:          jvilla@stackbuilders.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  exposed-modules:     QuickBooks
                       QuickBooks.Types
                       QuickBooks.Authenticate
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  -- other-modules:
  -- other-extensions:
  build-depends:         base               >= 4.7   && < 4.8
                       , aeson              == 0.8.*
                       , authenticate-oauth == 1.5.*
                       , bytestring         == 0.10.*
                       , http-client        == 0.4.*
                       , http-types         == 0.8.*
                       , http-client-tls    == 0.2.*
                       , interpolate        == 0.1.*
                       , text


test-suite spec
  default-language:    Haskell2010
  type:  exitcode-stdio-1.0
  hs-source-dirs: test,src
  ghc-options: -Wall -O2
  main-is: Spec.hs
  build-depends:     base   >= 4.7 && < 4.8
                   , hspec

-- copied from library
                   , aeson              == 0.8.*
                   , authenticate-oauth == 1.5.*
                   , bytestring         == 0.10.*
                   , http-client        == 0.4.*
                   , http-client-tls    == 0.2.*
                   , http-types         == 0.8.*
                   , interpolate        == 0.1.*
                   , text
