name:                quickbooks
version:             0.1.0.2
synopsis:            QuickBooks API binding.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Juan Villa
maintainer:          jvilla@stackbuilders.com
copyright:           plowtechnologies
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

description: This package is a binding to the QuickBooks API. The
             documentation can be test using the `cabal test doctests`
             command. However, the documentation tests are run against
             an Intuit sandbox which you must create.

             .

             Visit Intuit's developer site to create an "app":            
             <https://developer.intuit.com/>

             .
 
             After creating an app you can use your "app token" and
             consumer information to aquire credentials here: 
             <https://appcenter.intuit.com/Playground/OAuth>

             . 

             This package is configure by environment variables. Once
             you have your credentials please export the following
             environment:
             .
             * INTUIT_COMPANY_ID (your app's company ID)
             .
             * INTUIT_CONSUMER_KEY (your app's consumer key)
             . 
             * INTUIT_CONSUMER_SECRET (your app's consumer secret)
             .
             * INTUIT_TOKEN (the OAuth1.0 Token you created above *used for tests*)
             .
             * INTUIT_SECRET (the OAuth1.0 Secret you created above *used for tests*)
             .
             * INTUIT_HOSTNAME (which will be
               sandbox-quickbooks.api.intuit.com for development/test
               environments. See the developer website for production)

             .
             
             You can now run verify the documentation using  `cabal test`.


library
  exposed-modules:     QuickBooks

  other-modules:
                       QuickBooks.Authentication
                       QuickBooks.Invoice
                       QuickBooks.Logging
                       QuickBooks.Types

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:         base               >= 4.7   && < 4.8
                       , aeson              >= 0.7   && < 0.9
                       , authenticate-oauth == 1.5.*
                       , bytestring         == 0.10.*
                       , http-client        == 0.4.*
                       , http-types         == 0.8.*
                       , http-client-tls    == 0.2.*
                       , interpolate        == 0.1.*
                       , text
                       , fast-logger        == 2.2.*
                       , thyme              == 0.3.*
                       , old-locale         == 1.0.*
                       , email-validate     == 2.0.*

test-suite doctests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   src, test
  main-is:          doctests.hs

  build-depends:
    base,
    doctest == 0.9.*
