name:                quickbooks
version:             0.5.0.1
synopsis:            QuickBooks API binding.
-- description:
license:             BSD3
license-file:        LICENSE
author:              Juan Villa
maintainer:          jvilla@stackbuilders.com
copyright:           plowtechnologies
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

description: This package is a binding to the QuickBooks API. The
             documentation can be test using the `cabal test doctests`
             command. However, the documentation tests are run against
             an Intuit sandbox which you must create.

             .

             Visit Intuit's developer site to create an "app":
             <https://developer.intuit.com/>

             .

             After creating an app you can use your "app token" and
             consumer information to aquire credentials here:
             <https://appcenter.intuit.com/Playground/OAuth>

             .

             This package is configure by environment variables. Once
             you have your credentials please export the following
             environment:
             .
             * INTUIT_COMPANY_ID (your app's company ID)
             .
             * INTUIT_CONSUMER_KEY (your app's consumer key)
             .
             * INTUIT_CONSUMER_SECRET (your app's consumer secret)
             .
             * INTUIT_TOKEN (the OAuth1.0 Token you created above *used for tests*)
             .
             * INTUIT_SECRET (the OAuth1.0 Secret you created above *used for tests*)
             .
             * INTUIT_HOSTNAME (which will be
               sandbox-quickbooks.api.intuit.com for development/test
               environments. See the developer website for production)

             .

             You can now run verify the documentation using  `cabal test`.

source-repository head
  type:     git
  location: https://github.com/plow-technologies/quickbooks

library
  exposed-modules:     QuickBooks
                       QuickBooks.Authentication
                       QuickBooks.Bundle
                       QuickBooks.Category
                       QuickBooks.Customer
                       QuickBooks.Invoice
                       QuickBooks.Item
                       QuickBooks.Logging
                       QuickBooks.QBText
                       QuickBooks.Types


  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:         base >= 4.7   && < 5
                         -- We restrict the version of aeson until
                         -- https://github.com/bos/aeson/issues/293
                         -- is fixed.
                       , aeson
                       , hoauth2
                       , authenticate-oauth
                       , bytestring
                       , http-client
                       , http-types
                       , http-client-tls
                       , interpolate
                       , MissingH
                       , network-uri
                       , text
                       , fast-logger
                       , time
                       , thyme
                       , old-locale
                       , email-validate
                       , yaml

test-suite api-tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  hs-source-dirs:   src, test
  main-is:          Main.hs
  other-modules:    QuickBooks
                  , QuickBooks.Authentication
                  , QuickBooks.Bundle
                  , QuickBooks.Category
                  , QuickBooks.Customer
                  , QuickBooks.Invoice
                  , QuickBooks.Item
                  , QuickBooks.Logging
                  , QuickBooks.QBText
                  , QuickBooks.Types

  build-depends:
      base >= 4.7 && < 5
    , tasty
    , tasty-hunit
    , QuickCheck
    , tasty-quickcheck
    , tasty-smallcheck
    , aeson
    , hoauth2
    , authenticate-oauth 
    , bytestring
    , http-client
    , http-types
    , http-client-tls
    , interpolate
    , MissingH
    , network-uri
    , text
    , fast-logger
    , time
    , thyme
    , old-locale
    , email-validate
    , yaml
